--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,9 +1,13 @@
 <div class="login-container">
   <h2>Login</h2>
-  <form (submit)="onLogin()">
-    <input type="text" [(ngModel)]="user.username" name="username" placeholder="Username" required>
-    <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required>
-    <button type="submit">Login</button>
-    <p>Don't have an account? <a routerLink="/register">Register</a></p>
+  <form (ngSubmit)="onLogin()" #loginForm="ngForm">
+    <div class="form-group">
+      <input type="text" [(ngModel)]="user.username" name="username" placeholder="Username" required>
+    </div>
+    <div class="form-group">
+      <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required>
+    </div>
+    <button type="submit" [disabled]="!loginForm.form.valid">Login</button>
+    <p class="register-text">Don't have an account? <a routerLink="/register">Register</a></p>
   </form>
 </div>
