--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,38 @@
-<nav class="navbar">
-  <div class="container">
-    <a class="navbar-brand" (click)="dashboard()">Task Manager</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" (click)="dashboard()">Dashboard</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="task()">Tasks</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/profile">Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"  (click)="logout()">Logout</a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+  <div class="container-fluid">
+    <!-- Flex container for brand and toggler on the same line -->
+    <div class="d-flex w-100 justify-content-between align-items-center">
+      <a class="navbar-brand mb-0" (click)="dashboard()">Task Manager</a>
+
+      <button
+        class="navbar-toggler p-1"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+
+    <!-- Navigation links -->
+    <div class="collapse navbar-collapse mt-2 mt-lg-0" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" (click)="dashboard()">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="task()">Tasks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link logout-link" (click)="logout()">Logout</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
