Added the mobile app using iconic

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -33,6 +33,10 @@
           <a class="nav-link logout-link" (click)="logout()">Logout</a>
         </li>
       </ul>
+      <button class="btn btn-sm btn-outline-light" (click)="toggleDarkMode()">
+        <i class="fas" [ngClass]="isDarkMode ? 'fa-sun' : 'fa-moon'"></i>
+      </button>
+
     </div>
   </div>
 </nav>
