--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -9,6 +9,9 @@
       <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required>
     </div>
     <button type="submit" [disabled]="!loginForm.form.valid">Login</button>
+    <hr>
+    <button (click)="loginWithGoogle()">Login with Google</button>
+    <hr>
     <p class="register-text">Don't have an account? <a routerLink="/register">Register</a></p>
   </form>
 </div>
