--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -14,6 +14,15 @@
     <p class="register-text">Don't have an account? <a routerLink="/register">Register</a></p>
   </form>
   <hr>
-  <button (click)="loginWithGoogle()">Login with Google</button>
+  <button class="google-login-btn" (click)="loginWithGoogle()">
+    <svg class="google-icon" viewBox="0 0 533.5 544.3" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+      <path fill="#4285F4" d="M533.5 278.4c0-17.4-1.6-34-4.7-50.2H272v95.1h146.9c-6.4 34.4-25.7 63.6-54.9 83.1v68h88.6c51.8-47.7 81.9-118 81.9-195.9z"/>
+      <path fill="#34A853" d="M272 544.3c73.7 0 135.7-24.4 180.9-66.1l-88.6-68c-24.5 16.4-55.8 26-92.3 26-71 0-131.1-47.8-152.6-112.3H29.6v70.9c45.2 89.3 137.9 149.5 242.4 149.5z"/>
+      <path fill="#FBBC05" d="M119.4 324.8c-10.8-31.8-10.8-66.6 0-98.4v-70.9H29.6c-39.6 78.3-39.6 170.8 0 249.1l89.8-79.8z"/>
+      <path fill="#EA4335" d="M272 107.7c39.8 0 75.6 13.7 103.8 40.4l77.9-77.9C405.4 24 344.3 0 272 0 167.4 0 74.7 60.2 29.6 149.5l89.8 70.9c21.6-64.5 81.6-112.3 152.6-112.3z"/>
+    </svg>
+    Login with Google
+  </button>
+
 
 </div>
