--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -21,14 +21,14 @@
     <div class="collapse navbar-collapse mt-2 mt-lg-0" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" (click)="dashboard()">Dashboard</a>
+          <a class="nav-link" (click)="dashboard()">Tasks</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="task()">Tasks</a>
+          <a class="nav-link" (click)="task()">Add</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/profile">Profile</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link logout-link" (click)="logout()">Logout</a>
         </li>
