--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -2,13 +2,6 @@
 
 <div class="dashboard-container">
   <h2>Welcome to your Tasks</h2>
-
-  <!-- <form (ngSubmit)="createTask()" #taskForm="ngForm" class="task-form">
-    <input type="text" [(ngModel)]="newTask.title" name="title" placeholder="Task Title" required>
-    <input type="text" [(ngModel)]="newTask.description" name="description" placeholder="Description">
-    <button type="submit" [disabled]="!taskForm.form.valid">Add Task</button>
-  </form> -->
-
   <div class="tasks-list">
     <table>
       <thead>
@@ -23,7 +16,7 @@
         <tr *ngFor="let task of tasks">
           <td>{{ task.title }}</td>
           <td>{{ task.description }}</td>
-          <th>{{task.category}}</th>
+          <td>{{task.category}}</td>
           <td class="f">
             <button class="edit-btn" (click)="editTask(task)">Edit</button>
             <button class="delete-btn" (click)="deleteTask(task._id)">Delete</button>
