--- a/frontend/src/app/components/task/task.component.html
+++ b/frontend/src/app/components/task/task.component.html
@@ -1,3 +1,5 @@
+<app-loader *ngIf="loading"></app-loader>
+
 <form (ngSubmit)="createTask()" #taskForm="ngForm" class="task-form">
   <div class="form-group">
     <label for="title">Task Title</label>
